<resources>
    <string name="app_name">Mi Calculadora</string>
    <string name="titulo">CALCULADORA</string>
    <string name="numero_uno">Número uno</string>
    <string name="numero_dos">Número dos</string>
    <string name="boton_sumar">Calcular</string>
    <string name="boton_limpiar">Limpiar</string>
    <string name="error_numero_uno">Digite el numero uno</string>
    <string name="error_numero_dos">Digite numero dos</string>
    <string name="error_division">No puede dividir por 0</string>
    <string name="opcion_sumar">Sumar</string>
    <string name="opcion_restar">Restar</string>
    <string name="opcion_multiplicar">Multiplicar</string>
    <string name="opcion_dividir">Dividir</string>
    <string-array name="operaciones">
        <item>@string/opcion_sumar</item>
        <item>@string/opcion_restar</item>
        <item>@string/opcion_multiplicar</item>
        <item>@string/opcion_dividir</item>
    </string-array>

</resources>
